apps/ca-portal/ca-portal-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ca-portal
  namespace: ca-portal
  labels:
    app: ca-portal
    app.kubernetes.io/name: ca-portal
    argocd.argoproj.io/managed-by: argocd
spec:
  selector:
    app: ca-portal
  ports:
  - name: http
    port: 80
    targetPort: http
